air_maptopo-yk + some fixes trying to do some tetsts

--- a/Dissertation.Web/Views/Visualization/AirMap.cshtml
+++ b/Dissertation.Web/Views/Visualization/AirMap.cshtml
@@ -47,20 +47,17 @@
             <span>Overlay | </span>
             <span class="text-button" id="wind">None</span><span> – </span>
             <span class="text-button" id="temp">Temp</span><span> – </span>
-            @*@*<span class="text-button" id="hum">Hum</span><span> – </span>*@
-            @*<span class="text-button" id="wv">WV</span><span> – </span>*@
-            @*<span class="text-button" id="in">IN</span><span> – </span>*@
-            @*<span class="text-button" id="no">NO</span><span> – </span>*@
+            <span class="text-button" id="hum">Hum</span><span> – </span>
+            <span class="text-button" id="wv">WV</span><span> – </span>*
+            <span class="text-button" id="hcoh">HCOH</span><span> – </span>
+            <span class="text-button" id="hcl">HCl</span><span> – </span>
             <span class="text-button" id="no2">NO<span class="sub">2</span></span><span> – </span>
-            @*<span class="text-button" id="nox">NO<span class="sub">X</span></span><p></p>*@
+            <span class="text-button" id="hf">HF</span><p></p>
             <span style="visibility: hidden">Overlay | </span>
-            @*<span class="text-button" id="ox">O<span class="sub">X</span></span><span> – </span>*@
+            <span class="text-button" id="cl2">CL<span class="sub">2</span></span><span> – </span>
             <span class="text-button" id="so2">SO<span class="sub">2</span></span><span> – </span>
             <span class="text-button" id="co">CO</span><span> – </span>
-            @*<span class="text-button" id="ch4">CH<span class="sub">4</span></span><span> – </span>*@
-            @*<span class="text-button" id="nmhc">NMHC</span><span> – </span>*@
-            @*<span class="text-button" id="spm">SPM</span><span> – </span>*@
-            @*<span class="text-button" id="pm25">PM<span class="sub">2.5</span></span>*@
+            <span class="text-button" id="cxhy">CxHy</span><span> – </span>
        </div>
     </div>
     <script src="/Scripts/Air/when.js" charset="utf-8"></script>
