--- a/Dissertation.Web/Content/Air/styles.css
+++ b/Dissertation.Web/Content/Air/styles.css
@@ -60,8 +60,9 @@ body {
 
 #details {
     position: absolute;
-    bottom: 3%;
+    bottom: 25%;
     left: 2%;
+    font-size: x-small;
 }
 
 #arrow {
@@ -84,6 +85,7 @@ body {
     padding-bottom: 1em;
     position: absolute;
     left: 2%;
+    bottom: 5%;
 }
 
 h1, h2 {
